Correction alignement .container + position static

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ nav{
     display: flex;
     justify-content: space-between;
     padding-top: 20px;
-    margin-bottom: 10px;
     align-items: center;
 }
 
@@ -29,7 +28,7 @@ ul{
 
 li{
     padding: 15px;
-    font-size: 25px;
+    font-size: 140%;
 }
 
 a{
@@ -51,22 +50,31 @@ a{
 
 /*-----Container = grande div qui contient .email + .illustration-----*/
 .container{
+    width: 90%;
+    height: 80%;
     display:flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
+    position: static;
 }
 
 /*.email = toute la div h1 + email + input*/
-.email{
-    width: 27%;
+
+.description{   
+    width: 50%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
 }
 
+.email{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
 h1{
-    font-size: 60px;
+    font-size: 4rem;
     font-weight: 900;
     color: rgb(43, 43, 43);
     text-align: left;
@@ -76,22 +84,32 @@ h1{
 .email, .p{
     color: rgb(43, 43, 43);
     text-align: left;
-    font-size: 25px;
+    font-size: 140%;
+    padding: 5%;
 }
 
+input{
+    width: 500px;
+    height: 60px;
+    margin-top: 30px;
+    margin-left: 0;
+    border-radius: 40px;
+    opacity: 70%;
+    padding-left: 20px;
+    border: 0;
+}
+
+/*Illustration*/
 .illustration{
     width: 50%;
-    padding-top: 95px;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .image-illustration{
-    width: 85%;
+    width: 80%;
 }
 
-input{
-    border-radius: 40px;
-}
 /*-----Fin de grande div container-----*/
